--- a/dotnet_client_server/project.csproj
+++ b/dotnet_client_server/project.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TieredCompilation>true</TieredCompilation>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
